@@ -29,6 +29,7 @@
             SMAQ3: Add support for unknown compass IC
             Bangle.js: Add Bangle.softOff to allow the RTC to keep running
             nRF52: Allow devices to remember the time between reboots (even if RTC is reset)
+            Bangle.js: Make the 'home' button more configurable in code
  
      2v08 : nRF52: Added option to build in I2C slave support
             Fix Tensorflow aiGesture regression from 2v07 (re-add opcodes) (fix #1936)
